# elusive

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Makefile.toml  README.md  deny.toml  example-init  example.toml  hello.txt  qemu.sh  renovate.json
config/: basic.toml  systemd.toml  ucode.toml
config/systemd.d/: 10-btrfs.toml  20-cryptsetup.toml  30-tpm.toml
contrib/config/: elusive.yaml
contrib/config/elusive.d/: base.yaml  blk-ahci.yaml  blk-ata.yaml  blk-nvme.yaml  blk-virtio.yaml  device-mapper.yaml  fs-btrfs.yaml  fs-ext4.yaml  kmod.yaml  systemd-crypt.yaml  systemd-tpm.yaml  systemd-udev.yaml  systemd.yaml  tpm2.yaml  usb-hid.yaml
contrib/files/: init
contrib/files/etc/: group  passwd
crates/elusive/: Cargo.toml
crates/elusive/src/: cli.rs  config.rs  elf.rs  encoder.rs  initramfs.rs  io.rs  kmod.rs  lib.rs  main.rs  microcode.rs  newc.rs  search.rs  systemd.pest  systemd.rs  vfs.rs
crates/kmod-sys/: Cargo.toml
docker/builder/: Dockerfile  build.sh
docker/qemu/: Dockerfile  build.sh
elusive/: Cargo.toml
elusive/config/systemd.d/: 00-base.toml  10-ext4.toml
elusive/src/: cli.rs  config.rs  depend.rs  encoder.rs  initramfs.rs  io.rs  kmod.rs  lib.rs  main.rs  microcode.rs  newc.rs
elusive/tests/: elusive.rs
example/: motd
hack/: build.sh  qemu.sh
initramfs/basic/: motd
kmod-sys/: Cargo.toml  build.rs
kmod-sys/src/: lib.rs
samples/config/: basic.toml  basic.yaml  systemd.toml  systemd.yaml  ucode.yaml
samples/config/systemd.d/: 00-base.toml  00-base.yaml  10-btrfs.yaml  10-ext4.yaml  20-cryptsetup.toml  20-cryptsetup.yaml  30-tpm.toml  30-tpm.yaml
samples/files/basic/: init
samples/files/systemd/: init
samples/files/systemd/etc/: group  initrd-release
scripts/: lib.sh  test_boot.sh
shim/: Cargo.toml
shim/src/: main.rs
src/: archive.rs  builder.rs  cli.rs  config.rs  depend.rs  encoder.rs  initramfs.rs  kmod.rs  lib.rs  main.rs  microcode.rs  newc.rs  utils.rs
