[package]
name = "elusive"
version = "0.6.2"
authors = ["Valentin Finini <farenjihn@gmail.com>"]
description = "A custom initramfs generator"
license = "GPL-3.0"
repository = "https://github.com/Farenjihn/elusive"
edition = "2018"

[[bin]]
name = "elusive"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.48"
clap = "2.33.3"
env_logger = "0.9.0"
flate2 = "1.0.22"
kmod-sys = "0.1.2"
libc = "0.2.108"
log = "0.4.14"
thiserror = "1.0.30"
toml = "0.5.8"
walkdir = "2.3.2"
xz2 = "0.1.6"
zstd = "0.9.0"

[dependencies.object]
version = "0.27.1"
default-features = false
features = ["elf", "read_core", "std"]

[dependencies.serde]
version = "1.0.130"
features = ["derive"]
