[package]
name = "elusive"
version = "0.12.0"
authors = ["Valentin Finini <farenjihn@gmail.com>"]
description = "A custom initramfs generator"
license = "GPL-3.0"
repository = "https://github.com/Farenjihn/elusive"
edition = "2021"

[[bin]]
name = "elusive"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
env_logger = "0.10.0"
flate2 = "1.0.28"
libc = "0.2.149"
log = "0.4.20"
num_cpus = "1.16.0"
serde_yaml = "0.9.25"
thiserror = "1.0.50"
walkdir = "2.4.0"
xz2 = "0.1.7"

[dependencies.clap]
version = "4.4.7"
features = ["derive"]

[dependencies.object]
version = "0.32.1"
default-features = false
features = ["elf", "read_core", "std"]

[dependencies.serde]
version = "1.0.190"
features = ["derive"]

[dependencies.zstd]
version = "0.13.0"
features = ["zstdmt"]

[dependencies.kmod-sys]
path = "../kmod-sys"
