[package]
name = "elusive"
version = "0.12.0"
authors = ["Valentin Finini <farenjihn@gmail.com>"]
description = "A custom initramfs generator"
license = "GPL-3.0"
repository = "https://github.com/Farenjihn/elusive"
edition = "2021"

[[bin]]
name = "elusive"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.79"
env_logger = "0.11.1"
flate2 = "1.0.28"
libc = "0.2.152"
log = "0.4.20"
num_cpus = "1.16.0"
serde_yaml = "0.9.31"
thiserror = "1.0.56"
walkdir = "2.4.0"
xz2 = "0.1.7"

[dependencies.clap]
version = "4.4.18"
features = ["derive"]

[dependencies.object]
version = "0.32.2"
default-features = false
features = ["elf", "read_core", "std"]

[dependencies.serde]
version = "1.0.195"
features = ["derive"]

[dependencies.zstd]
version = "0.13.0"
features = ["zstdmt"]

[dependencies.kmod-sys]
path = "../kmod-sys"
