[package]
name = "elusive"
version = "0.13.1"
authors = ["Valentin Finini <farenjihn@gmail.com>"]
description = "A custom initramfs generator"
license = "GPL-3.0"
repository = "https://github.com/Farenjihn/elusive"
edition = "2021"

[[bin]]
name = "elusive"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.80"
env_logger = "0.11.2"
flate2 = "1.0.28"
libc = "0.2.153"
log = "0.4.20"
num_cpus = "1.16.0"
serde_yaml = "0.9.32"
thiserror = "1.0.57"
walkdir = "2.4.0"
xz2 = "0.1.7"

[dependencies.clap]
version = "4.5.1"
features = ["derive"]

[dependencies.object]
version = "0.32.2"
default-features = false
features = ["elf", "read_core", "std"]

[dependencies.serde]
version = "1.0.197"
features = ["derive"]

[dependencies.zstd]
version = "0.13.0"
features = ["zstdmt"]

[dependencies.kmod-sys]
path = "../kmod-sys"
