[package]
name = "elusive"
version = "0.14.3"
authors = ["Valentin Finini <farenjihn@gmail.com>"]
description = "A custom initramfs generator"
license = "GPL-3.0"
repository = "https://github.com/Farenjihn/elusive"
edition = "2021"

[[bin]]
name = "elusive"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.81"
env_logger = "0.11.3"
flate2 = "1.0.28"
libc = "0.2.153"
log = "0.4.21"
num_cpus = "1.16.0"
pest = "2.7.8"
pest_derive = "2.7.8"
serde_yaml = "0.9.33"
thiserror = "1.0.58"
walkdir = "2.5.0"

[dependencies.clap]
version = "4.5.3"
features = ["derive"]

[dependencies.object]
version = "0.36.0"
default-features = false
features = ["elf", "read_core", "std"]

[dependencies.serde]
version = "1.0.200"
features = ["derive"]

[dependencies.zstd]
version = "0.13.0"
features = ["zstdmt"]

[dependencies.kmod-sys]
path = "../kmod-sys"
